--- a/frontend/src/components/EarthTypeMenu/EarthTypeMenu.scss
+++ b/frontend/src/components/EarthTypeMenu/EarthTypeMenu.scss
@@ -17,8 +17,8 @@
 
 .earth-time-dropdown__content {
     position: absolute;
-    background-color: transparent;
-    min-width: 250px;
+    background-color: black;
+    min-width: 150px;
     z-index: 1;
     display: none;
 }
@@ -32,7 +32,7 @@
 
 .earth-time-dropdown__content li {
     padding-top: 8px;
-    padding-left: 24px;
+    padding-left: 8px;
 }
 
 .earth-time-dropdown__content span:hover {color: $orange}
