--- a/frontend/src/pages/ThreeDEarthPage/EarthMorePage/EarthMorePage.scss
+++ b/frontend/src/pages/ThreeDEarthPage/EarthMorePage/EarthMorePage.scss
@@ -1,20 +1,19 @@
-img {
-  width: 30%;
-  float: left;
-  margin-right: 18px;
-  margin-bottom: 18px;
-}
-
-h1 {
-  font-size: 24px;
-  font-weight: 400;
-  line-height: 32px;
-  text-transform: uppercase;
-}
-
-
 .earth-more {
   padding-top: 32px;
+
+  &__image {
+    width: 30%;
+    float: left;
+    margin-right: 18px;
+    margin-bottom: 18px;
+  }
+
+  &__title {
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 32px;
+    text-transform: uppercase;
+  }
 
   &__text {
     text-wrap: revert;
