1. Minor changes to frontend are mande; 2. Dockerfile is corrected; 3. DB updated; 4. t2_json_out.py is created.

--- a/frontend/src/components/Layout/Layout.scss
+++ b/frontend/src/components/Layout/Layout.scss
@@ -15,6 +15,20 @@
   }
 }
 
+.content {
+  z-index: 10;
+}
+
+.fixed {
+  position: fixed;
+}
+
+.max-w-max {
+  max-width: -webkit-max-content;
+  max-width: -moz-max-content;
+  max-width: max-content;
+}
+
 header {
   z-index: 100;
 }
